Fix text not fitting inside button on floating bar

--- a/src/targets/meandall/styles/views/floating-bar.less
+++ b/src/targets/meandall/styles/views/floating-bar.less
@@ -3,6 +3,9 @@
 //////////////////////
 floating-bar {
   background: @c-booking-widget;
+  button-submit {
+    padding: 0;
+  }
   .viewport-mobile & {
     background: @c-booking-widget-active;
   }
